--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.9",
     "ejs": "^3.1.5",
     "express": "~4.16.1",
+    "express-formidable": "^1.2.0",
     "firebase": "^8.2.1",
     "http-errors": "~1.6.3",
     "jquery": "^3.5.1",
